microstructure.html added
- css and resizing works for new page
- might want to add pics showing % in each phase for new page

--- a/portfolio.html
+++ b/portfolio.html
@@ -76,14 +76,19 @@
 			</div>
 			<div class="imgCenter">
 				<span class="cont">
-					<a target="_blank" href= https://github.com/KaarthicPulogarajah/VandermondeMatrix><img class = "portpics" src="img/vmatrix.png"></a>
-					<p class="cent">Vandermonde Matrix</p>
+					<a href="flightpath.html"><img class = "portpics" src="img/planepic.jpg"></a>
+					<p class="cent">Airplane Trajectory</p>
 				</span>
 			</div>
 			<div class="imgCenter">	
 				<span class="cont">
-					<a href="flightpath.html"><img class = "portpics" src="img/planepic.jpg"></a>
-					<p class="cent">Airplane Trajectory</p>
+					<p class="cent">Microstructure Analysis</p>
+				</span>
+			</div>
+			<div class="imgCenter">	
+				<span class="cont">
+					<a target="_blank" href= https://github.com/KaarthicPulogarajah/VandermondeMatrix><img class = "portpics" src="img/vmatrix.png"></a>
+					<p class="cent">Vandermonde Matrix</p>
 				</span>
 			</div>
 			<div class="imgCenter">
@@ -110,21 +115,6 @@
 					<p class="cent">2048</p>
 				</span>
 			</div>
-			
-			<!-- <div style="visibility:hidden;">  -->
-				<!-- <span class="cont" id="portpad"> -->
-					<!-- <a target="_blank" href= https://github.com/KaarthicPulogarajah/2048><img class = "portpics" src="img/2048.png"></a> -->
-					<!-- <p class="cent">2048</p> -->
-				<!-- </span> -->
-				<!-- <span class="cont"> -->
-					<!-- <a target="_blank" href= https://github.com/KaarthicPulogarajah/2048><img class = "portpics" src="img/2048.png"></a> -->
-					<!-- <p class="cent">2048</p> -->
-				<!-- </span> -->
-				<!-- <span class="cont" id="portpad"> -->
-					<!-- <a target="_blank" href= https://github.com/KaarthicPulogarajah/2048><img class = "portpics" src="img/2048.png"></a> -->
-					<!-- <p class="cent">2048</p> -->
-				<!-- </span> -->
-			<!-- </div> -->
 			
 		</span>
 
