--- a/traxxas.html
+++ b/traxxas.html
@@ -31,7 +31,7 @@
 		<img id = "mac" src="img\mackenzie.jpg">
 	</div>
 	
-	<p class="text">This fall, my group and I were given the challenge of creating assistive technology for our new classmate. Given a Traxxas Telluride RC car and a stuffed toy to represent our classmate, we had to build a device atop the car to transport our classmate to each of our classes with the requirement that our classmate had to be able to see the board from anywhere in the class.
+	<p class="text">In autumn of first year, my group and I were given the challenge of creating assistive technology for our new classmate. Given a Traxxas Telluride RC car and a stuffed toy to represent our classmate, we had to build a device atop the car to transport our classmate to each of our classes with the requirement that our classmate had to be able to see the board from anywhere in the class.
 	</p>
 
 	<div class="imgCenter"> <img id= "autocad" src="img\autocad.jpg"></div>
