portflio hadn't been updated, mistake

--- a/portfolio.html
+++ b/portfolio.html
@@ -82,6 +82,7 @@
 			</div>
 			<div class="imgCenter">	
 				<span class="cont">
+					<a href= "microstructure.html"><img class = "portpics" src="img/microTitle.png"></a>
 					<p class="cent">Microstructure Analysis</p>
 				</span>
 			</div>
