Added link to portfolio in Portfolio Highlights

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						</div>
 					</div>
 
-					<h2>Portfolio Highlights</h2>
+					<h2><a href="portfolio.html">Portfolio Highlights</a></h2>
 					<!-- <div style="display: inline-block;"> -->
 					<div class="imgCenter">
 						<span class="conts">
