Changes to header
- Updating links on header
- Updating first 3 portfolio links

--- a/3d.html
+++ b/3d.html
@@ -19,8 +19,8 @@
 <body>
 <main>
 
-		<div class="header"><a href = "index.html">   <span >Kaarthic P.</span></a><a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img style="float:right" class="logo" src="img/github2.png"></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a target="_blank" class="link" href="pdf/Kaarthic_Resume.pdf"><img style="float:right" class="logo" src="img/adobe.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
-				
+	<div class="header"><a href = "index.html">   <span >Kaarthic P.</span></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
+						
 		<p id="modThree" class = "titleP">3D Modelling</p>
 		<!-- <p class = "padP"></p> -->
 		<div class = "boxP">
@@ -43,7 +43,7 @@
 					var captionText = document.getElementById("caption6");
 					img.onclick = function(){
 					    modal.style.display = "block";
-					    modalImg.src = "img/teaback.png";
+					    modalImg.src = "img/teaback2.png";
 					    captionText.innerHTML = "As my first project using Solidworks surface modelling, I experimented with split line, delete face, boundary surface, trim and knit surfaces, and lofts among other features to model a set of silicone tea infusers.";
 					}
 
