--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 				 	<img class = "back" src="img/background2.jpg">
 				</div>
 
-				<div class="header"><a href = "index.html">   <span >Kaarthic P.</span></a><a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img style="float:right" class="logo" src="img/github2.png"></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a target="_blank" class="link" href="pdf/Kaarthic_Resume.pdf"><img style="float:right" class="logo" src="img/adobe.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
+				<div class="header"><a href = "index.html">   <span >Kaarthic P.</span></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
 				<!-- <div class="header"><a href = "index.html">   <span >Kaarthic Pulogarajah</span></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div> -->
 				 
-				<div><p class="title"> Kaarthic Pulogarajah</p></div>
+				<div><p class="title"> Kaarthic Pulo</p></div>
 			 	<!-- <div id="block"> -->
 			 	<p class="titlepic"><img class="titlepics" src="img/kaarthic2.jpg"></p>
-				<p class="iam">Mechanical Engineering Student</p><p id="iamUNI" class="iam">University of Waterloo <br> </p>
+				<p class="iam">Mechanical Engineering Graduate</p><p id="iamUNI" class="iam">University of Waterloo <br> </p>
 			 	</div>
 
 			 	<!-- <p id = "pad"></p> -->
@@ -39,7 +39,7 @@
 					<div class="col">
 						<div class="column">
 							<p class="about">About Me </p>
-							<p>I am a mechanical engineering student, passionate about creating innovative solutions to complex ideas.</p>
+							<p>I am an aspiring professional mechanical engineer, passionate about creating innovative solutions to complex ideas.</p>
 						</div>
 						<div class="column">
 							<p class="about">Personal Philosophy </p>
@@ -48,7 +48,7 @@
 						</div>
 						<div class="column">
 							<p class="about">Interests</p>
-							<p>I enjoy projects that require continuous learning and application of knowledge to optimize designs.</p>
+							<p>I enjoy projects that require continuous learning and application of experience to produce innovative designs.</p>
 						</div>
 					</div>
 
@@ -61,8 +61,8 @@
 						</span>
 						<div class="flightAlign"></div>
 						<span class="conts">
-							<a target="_blank" href= https://github.com/KaarthicPulogarajah/Battleship><img class = "portpicsx" src="img/battleship.jpg"></a>
-							<span class="cents">Battleship</span>
+							<a href= "3d.html"><img class = "portpicsx" src="img/teas_1.png"></a>
+							<span class="cents">Tea Infuser Set</span>
 						</span>
 						<div class="flightAlign"></div>
 						<span class="conts">
