--- a/planetsim.html
+++ b/planetsim.html
@@ -19,16 +19,16 @@
 <body>
 <main>
 
-	<div class="header"><a href = "index.html">   <span >Kaarthic P.</span></a><a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img style="float:right" class="logo" src="img/github2.png"></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a target="_blank" class="link" href="pdf/Kaarthic_Resume.pdf"><img style="float:right" class="logo" src="img/adobe.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
-	
+	<div class="header"><a href = "index.html">   <span >Kaarthic P.</span></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
+				
 
 	<p id = "titleF" >Planets Orbiting Simulation </p>
 	<!-- <p class = "padP"></p> -->
 
 	<div class = "boxP">
 
-	<p class="text">The objective of this project was to use MATLAB to create an accurate 2-D simulation of the planets (and Pluto) orbiting the sun in our solar system. To acheieve this goal, I followed a several step procedure. The first step was to collect all relevant data on the planets in the solar system. This included number of orbit days, major and minor axes of the elliptical orbit, and tilt of the ellipse relative to standard position.</p>
-	<p class="text">Once the data was collected or calculated, I compiled it into an Excel spreadsheet to be read by the MATLAB script. Next, the position of the planets on August 8th, 2017 was calculated from http://www.theplanetstoday.com/, to be used as a baseline from which to start the simulation.</p>
+	<p class="text">The objective of this project was to use MATLAB to create an accurate 2-D simulation of the planets (and Pluto) orbiting the sun in our solar system. To achieve this goal, I followed a several step procedure. The first step was to collect all relevant data on the planets in the solar system. This included number of orbit days, major and minor axes of the elliptical orbit, and tilt of the ellipse relative to standard position.</p>
+	<p class="text">Once the data was collected or calculated, I compiled it into an Excel spreadsheet to be read by the MATLAB script. Next, the initial position of the planets was calculated from http://www.theplanetstoday.com/, to be used as a baseline from which to start the simulation.</p>
 
 	<div class="imgCenter">
 		<img id="planets1" src="img/planetsaug08.png">
@@ -46,7 +46,7 @@
 	<div class="imgCenter">
 		<img id="planets4" src="img/planetsdist.PNG">
 		<div class="flightAlign"></div>
-		<img id="planets5" src="img/planetsfig1.jpg">
+		<img id="planets5" src="img/planetsfig2.jpg">
 	</div>
 
 	<p class="text">Final Possible Simulation Results:</p>
@@ -55,7 +55,7 @@
 		<img id="planets6" src="img/planetsim2.gif">
 	</div>
 
-	<p>Github Link: <a target="_blank" style= "color:#0000EE;" href="https://github.com/KaarthicPulogarajah/Planet-Simulation"><i>Planets Simulation</i></a></p>
+	<!-- <p>Github Link: <a target="_blank" style= "color:#0000EE;" href="https://github.com/KaarthicPulogarajah/Planet-Simulation"><i>Planets Simulation</i></a></p> -->
 	
 	</div>
 </main>
