--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
 <body>
 <main >
 
-	<div class="header"><a href = "index.html">   <span >Kaarthic P.</span></a><a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img style="float:right" class="logo" src="img/github2.png"></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a target="_blank" class="link" href="pdf/Kaarthic_Resume.pdf"><img style="float:right" class="logo" src="img/adobe.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
-	
+	<div class="header"><a href = "index.html">   <span >Kaarthic P.</span></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
+				
 	<div id= "portTitle" class = "titleP"><a href = "portfolio.html">Portfolio</a><div id="portgap1"></div>
 		<span id="eng_des" class="about" onclick="toggleHide(eng_des)">Engineering Design</span><div id="portgap2"></div>
 		<span id="soft_dev" class="about" onclick="toggleHide(soft_dev)">Software Development</span><div id="portgap3"></div>
