Added Stewart Platform
- Added SP
- Text wording changes

--- a/3d.html
+++ b/3d.html
@@ -58,37 +58,38 @@
 
 			</div>
 			<div class="cont">
-				<img id = "portpic1" src="img/waterpump.jpg" >
-				<p class="cent">Water Pump</p>
+				<img id = "portpic3" src="img/trophy1.png">
+				<p class="cent">Trophy</p>
 
-				<div id="myModal1" class="modal">
+				<div id="myModal3" class="modal">
 				  <span class="close">&times;</span>
-				  <img class="modal-content" id="img01">
-				  <div id="caption1"></div>
+				  <img class="modal-content" id="img03">
+				  <div id="caption3"></div>
 				</div>
 				<script>
-				var modal = document.getElementById('myModal1');
+					var modal = document.getElementById('myModal3');
 
 				// Get the image and insert it inside the modal
-				var img = document.getElementById("portpic1");
-				var modalImg = document.getElementById("img01");
-				var captionText = document.getElementById("caption1");
-				img.onclick = function(){
-				    modal.style.display = "block";
-				    modalImg.src = "img/waterpumpback.png";
-				    captionText.innerHTML = "I created this water pump using ProDesktop as an assembly consisting of several parts, and using many features such as sweep, helix, shell, loft, fillet, and extrude.";
-				}
+					var img = document.getElementById("portpic3");
+					var modalImg = document.getElementById("img03");
+					var captionText = document.getElementById("caption3");
+					img.onclick = function(){
+					    modal.style.display = "block";
+					    modalImg.src = "img/trophyback2.png";
+					    captionText.innerHTML = "<br>I re-created one of my trophies in CAD, then rendered the original model. <br>Rendering options: burnished gold material, room lighting, 50mm camera lens.";
+					}
 
-				// Get the <span> element that closes the modal
-				var span = document.getElementsByClassName("close")[1];
+					// Get the <span> element that closes the modal
+					var span = document.getElementsByClassName("close")[3];
 
-				// When the user clicks on <span> (x), close the modal
-				span.onclick = function() {
-				    modal.style.display = "none";
-				}
+					// When the user clicks on <span> (x), close the modal
+					span.onclick = function() {
+					    modal.style.display = "none";
+					}
 				</script>
 
 			</div>
+
 			<div class="cont">
 				<img id = "portpic2" src="img/cellphonestand.png">
 				<p class="cent">Cell Phone Stand</p>
@@ -108,7 +109,7 @@
 					img.onclick = function(){
 					    modal.style.display = "block";
 					    modalImg.src = "img/cellphoneback.png";
-					    captionText.innerHTML = "Using Solidworks I designed this cell phone stand with the constraint of using 2 cubic inches of material maximum. The stand was designed to hold a Samsung S4 at two different angles in either orientation. After 3D printing the phone stand, the design proved to be effective.";
+					    captionText.innerHTML = "Using Solidworks I designed this cell phone stand with the constraint of using 2 cubic inches of material. The stand was designed to hold a Samsung phone at two different angles in either orientation. After 3D printing the phone stand, the design proved to be effective.";
 					}
 
 					// Get the <span> element that closes the modal
@@ -120,38 +121,41 @@
 					}
 				</script>
 			</div>
+			
 			<div class="cont">
-				<img id = "portpic3" src="img/trophy1.png">
-				<p class="cent">Trophy</p>
+				<img id = "portpic1" src="img/waterpump.jpg" >
+				<p class="cent">Water Pump</p>
 
-				<div id="myModal3" class="modal">
+				<div id="myModal1" class="modal">
 				  <span class="close">&times;</span>
-				  <img class="modal-content" id="img03">
-				  <div id="caption3"></div>
+				  <img class="modal-content" id="img01">
+				  <div id="caption1"></div>
 				</div>
 				<script>
-					var modal = document.getElementById('myModal3');
+				var modal = document.getElementById('myModal1');
 
 				// Get the image and insert it inside the modal
-					var img = document.getElementById("portpic3");
-					var modalImg = document.getElementById("img03");
-					var captionText = document.getElementById("caption3");
-					img.onclick = function(){
-					    modal.style.display = "block";
-					    modalImg.src = "img/trophyback2.png";
-					    captionText.innerHTML = "<br>I created a model of a trophy using ProDesktop, then rendered the original model. <br>Rendering options: burnished gold material, room lighting, 50mm camera lens.";
-					}
+				var img = document.getElementById("portpic1");
+				var modalImg = document.getElementById("img01");
+				var captionText = document.getElementById("caption1");
+				img.onclick = function(){
+				    modal.style.display = "block";
+				    modalImg.src = "img/waterpumpback.png";
+				    captionText.innerHTML = "An early endeavour into the world of 3D modelling, I created this water pump using ProDesktop as an assembly consisting of several parts, and using many features such as sweep, helix, shell, loft, fillet, and extrude.";
+				}
 
-					// Get the <span> element that closes the modal
-					var span = document.getElementsByClassName("close")[3];
+				// Get the <span> element that closes the modal
+				var span = document.getElementsByClassName("close")[1];
 
-					// When the user clicks on <span> (x), close the modal
-					span.onclick = function() {
-					    modal.style.display = "none";
-					}
+				// When the user clicks on <span> (x), close the modal
+				span.onclick = function() {
+				    modal.style.display = "none";
+				}
 				</script>
 
 			</div>
+			
+			
 			<!--
 			<div class="cont">
 				<img id = "portpic4" src="img/matinv.png">
@@ -204,7 +208,7 @@
 					img.onclick = function(){
 					    modal.style.display = "block";
 					    modalImg.src = "img/horseback.png";
-					    captionText.innerHTML = "I constructed this rocking horse model by taking measurements of this toy, then recreating the design on ProDesktop. I learnt to manage assemblies and use the different types of mates effectively.";
+					    captionText.innerHTML = "I constructed this rocking horse model by taking measurements of this toy, then recreating the design in CAD. I learnt to manage assemblies and use the different types of mates effectively.";
 					}
 
 					// Get the <span> element that closes the modal
