--- a/fridge.html
+++ b/fridge.html
@@ -19,13 +19,13 @@
 <body>
 <main>
 
-	<div class="header"><a href = "index.html">   <span >Kaarthic P.</span></a><a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img style="float:right" class="logo" src="img/github2.png"></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a target="_blank" class="link" href="pdf/Kaarthic_Resume.pdf"><img style="float:right" class="logo" src="img/adobe.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
+	<div class="header"><a href = "index.html">   <span >Kaarthic P.</span></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
 	
 	<p id = "titleF" style="text-align:left">Freezing and Cooling Technologies 	</p>
 	<!-- <p class = "padP"></p> -->
 	<div class = "boxP">
 
-	<p class="text">This project was intended as a submission to a NineSigma Innovation Contest: <a target="_blank" style= "color:#0000EE;" href="https://ninesights.ninesigma.com/web/unilever-gallery/needs-listing/-/needs-portlet/viewNeed?_NeedsPortlet_WAR_NeedPortletsportlet_needId=706"><u><i>New and Novel Freezing and Cooling Technologies</i></u></a></p>
+	<p class="text">This project was intended as a submission to a NineSigma Innovation Contest: <i>New and Novel Freezing and Cooling Technologies</i></p>
 	<p class="text">The purpose of this challenge was to design an innovative technology to chill and store food without accessing power from the grid. My group and I came up with a solution based loosely from a Zeer Pot. Our solution was to design a pot with a layer of sand or soil around it, surrounding by another pot of a semi-permeable membrane. Water would be added to the sand and when the water evaporated, the entire system would decrease in temperature.</p>
 	
 	<div class="imgCenter">
