--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 						<div class="column">
 							<p class="about">Personal Philosophy </p>
 							<p>"Complexity is just a symptom of confusion."</p>
-							<img class = "middlepic" src="img/kaarthic.jpg">
+							<img class = "middlepic" src="img/kaarthic4.png">
 						</div>
 						<div class="column">
 							<p class="about">Interests</p>
-							<p>I enjoy projects that require continuous learning and application of experience to produce innovative designs.</p>
+							<p>I enjoy projects that require continuous learning and application of experience to produce robust designs.</p>
 						</div>
 					</div>
 
@@ -66,8 +66,8 @@
 						</span>
 						<div class="flightAlign"></div>
 						<span class="conts">
-							<a href="planetsim.html"><img class = "portpicsx" src="img/planets.jpg"></a>
-							<span class="cents">Planets Simulation</span>
+							<a href="flightpath.html"><img class = "portpicsx" src="img/planepic.jpg"></a>
+							<span class="cents">Airplane Trajectory</span>
 						</span>
 					</div>
 
