--- a/portfolio.html
+++ b/portfolio.html
@@ -37,14 +37,20 @@
 			</div>
 			<div class="imgCenter">
 				<span class="cont">
+					<a href="SGplatform.html"><img class = "portpics" src="img/SGplat3.jpg"></a>
+					<p class="cent">Stewart Platform Maze Solver</p>
+				</span>
+			</div>
+			<div class="imgCenter">
+				<span class="cont">
 					<a href="3d.html"><img class = "portpics" src="img/trophy1.png"></a>
 					<p class="cent">3D Modelling</p>
 				</span>
 			</div>
-			<div class="imgCenter">		
+			<div class="imgCenter">
 				<span class="cont">
-					<a href="fridge.html"><img class = "portpics" src="img/ice2.jpg"></a>
-					<p class="cent">Freezing and Cooling Technologies</p>
+					<a href="flightpath.html"><img class = "portpics" src="img/planepic.jpg"></a>
+					<p class="cent">Airplane Trajectory</p>
 				</span>
 			</div>
 			<div class="imgCenter">
@@ -58,15 +64,6 @@
 					<a href="traxxas.html"><img class = "portpics" src="img/traxxas.png"></a>
 					<p class="cent">Assistive Technology</p>
 				</span>
-			</div>			
-		</span>
-		
-		<span id="hide_soft">
-			<div class="imgCenter">
-				<span class="cont">
-					<a target="_blank" href= https://github.com/KaarthicPulogarajah/Battleship><img class = "portpics" src="img/battleship.jpg"></a>
-					<p class="cent">Battleship</p>
-				</span>
 			</div>
 			<div class="imgCenter">	
 				<span class="cont">
@@ -74,18 +71,30 @@
 					<p class="cent">Planets Simulation</p>
 				</span>
 			</div>
-			<div class="imgCenter">
-				<span class="cont">
-					<a href="flightpath.html"><img class = "portpics" src="img/planepic.jpg"></a>
-					<p class="cent">Airplane Trajectory</p>
-				</span>
-			</div>
+			
 			<div class="imgCenter">	
 				<span class="cont">
 					<a href= "microstructure.html"><img class = "portpics" src="img/microTitle.png"></a>
 					<p class="cent">Microstructure Analysis</p>
 				</span>
 			</div>
+			<div class="imgCenter">		
+				<span class="cont">
+					<a href="fridge.html"><img class = "portpics" src="img/ice2.jpg"></a>
+					<p class="cent">Freezing and Cooling Technologies</p>
+				</span>
+			</div>
+		</span>
+		
+		<!-- Software Projects -->
+		<span id="hide_soft">
+			<div class="imgCenter">
+				<span class="cont">
+					<a target="_blank" href= https://github.com/KaarthicPulogarajah/Battleship><img class = "portpics" src="img/battleship.jpg"></a>
+					<p class="cent">Battleship</p>
+				</span>
+			</div>
+			
 			<div class="imgCenter">	
 				<span class="cont">
 					<a target="_blank" href= https://github.com/KaarthicPulogarajah/VandermondeMatrix><img class = "portpics" src="img/vmatrix.png"></a>
