--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 				<div><p class="title"> Kaarthic Pulo</p></div>
 			 	<!-- <div id="block"> -->
 			 	<p class="titlepic"><img class="titlepics" src="img/kaarthic2.jpg"></p>
-				<p class="iam">Mechanical Engineering Graduate</p><p id="iamUNI" class="iam">University of Waterloo <br> </p>
+				<p class="iam">Building Canadarm3 @ MDA</p>
+				<p id="iamUNI" class="iam">Mechanical Engineering 2021 - University of Waterloo <br> </p>
 			 	</div>
 
 			 	<!-- <p id = "pad"></p> -->
